--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -145,6 +145,11 @@ RUN wget https://storage.googleapis.com/download.tensorflow.org/models/tflite/co
 RUN wget https://dl.google.com/coral/canned_models/coco_labels.txt && mv coco_labels.txt models/coco_labels0.txt
 RUN wget http://download.tensorflow.org/models/object_detection/faster_rcnn_inception_v2_coco_2018_01_28.tar.gz && tar -zxvf faster_rcnn_inception_v2_coco_2018_01_28.tar.gz faster_rcnn_inception_v2_coco_2018_01_28/frozen_inference_graph.pb --strip=1 --no-same-owner && mv frozen_inference_graph.pb models/faster_rcnn_inception_v2_coco_2018_01_28.pb && rm faster_rcnn_inception_v2_coco_2018_01_28.tar.gz
 RUN wget https://raw.githubusercontent.com/amikelive/coco-labels/master/coco-labels-2014_2017.txt && mv coco-labels-2014_2017.txt models/coco_labels1.txt
+
+# add edge tpu model
+RUN wget https://github.com/google-coral/test_data/raw/master/inception_v4_299_quant_edgetpu.tflite && mv inception_v4_299_quant_edgetpu.tflite models/inception_v4_299_quant_edgetpu.tflite
+RUN wget https://github.com/google-coral/test_data/raw/master/imagenet_labels.txt && mv imagenet_labels.txt models/imagenet_labels2.txt
+
 ADD config.yaml config.yaml
 
 CMD ["/opt/doods/doods", "-c", "/opt/doods/config.yaml", "api"]
