--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,6 @@
 doods:
   detectors:
     - name: default
-      type: tflite
-      modelFile: models/coco_ssd_mobilenet_v1_1.0_quant.tflite
-      labelFile: models/coco_labels0.txt
-      numThreads: 4
-      numConcurrent: 4
-      hwAccel: false
-      timeout: 2m
-    - name: tensorflow
       type: tensorflow
       modelFile: models/faster_rcnn_inception_v2_coco_2018_01_28.pb
       labelFile: models/coco_labels1.txt
@@ -16,3 +8,13 @@ doods:
       numConcurrent: 4
       hwAccel: false
       timeout: 2m
+
+    # - name: inceptiontpu
+    #   type: tflite
+    #   modelFile: models/inception_v4_299_quant_edgetpu.tflite
+    #   labelFile: models/imagenet_labels2.txt
+    #   # modelFile: models/ssd_mobilenet_v2_coco_quant_postprocess_edgetpu.tflite
+    #   # labelFile: models/coco_labels2.txt
+    #   numThreads: 0
+    #   numConcurrent: 4
+    #   hwAccel: true
